--- a/index.html
+++ b/index.html
@@ -27,37 +27,55 @@
 </head>
 
 <body>
-	<nav class="navbar bg-dark navbar-dark">
-		<div class="container">
-			<a class="navbar-brand" href="#">HOME</a>
-			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="collapsibleNavbar">
-				<ul class="navbar-nav">
-					<li class="nav-item">
-						<a class="nav-link" href="CommandeGit.html">Commande Git</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="https://github.com/qpeachy">GitHub</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="https://about.gitlab.com/">GitLab</a>
-					</li>
-				</ul>
-			</div>
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+	  <div class="container-fluid">
+		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+		  <span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+		  <a class="navbar-brand" href="index.htlm">Home</a>
+		  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+			 <li class="nav-item dropdown">
+			  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+				GIT
+			  </a>
+			  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+			  <li><a class="dropdown-item" href="CommandeGit.html">Documentation</a></li>
+			  <li><hr class="dropdown-divider"></li>
+			  <li><a class="dropdown-item" href="https://github.com/qpeachy">GitHub</a></li>
+			  </ul>
+			</li>
+					
+			<li class="nav-item dropdown">
+			  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+				GitLab
+			  </a>
+			  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+			  <li><a class="dropdown-item" href="GitLab.html">Documentation</a></li>
+			  <li><hr class="dropdown-divider"></li>
+			  <li><a class="dropdown-item" href="https://about.gitlab.com/">GitLab</a></li>
+			  </ul>
+			</li>
+			
+		  </ul>
+		  <form class="d-flex">
+			<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+			<button class="btn btn-outline-success" type="submit">Search</button>
+		  </form>
 		</div>
+	  </div>
 	</nav>
-
+	
+	
 	<main role="main" class="container">
-			<div class="text-center"><img src="img/gitprin.png" class="rounded"></div>
-            <div class="title" id='p1'>
+		<div class="text-center title" id='p1'>
                 <h1></br>Qu'est ce que GIT ?</br></h1>
                 <p class="lead h5"> Git est de loin le système de contrôle de version le plus largement utilisé aujourd'hui.
                   Git est un projet open source avancé, qui est activement maintenu. À l'origine, il a été développé en 2005 par Linus Torvalds, le créateur bien connu du noyau du système d'exploitation Linux</p>
-    </main>
-	 </div>
-			<div class="lead text-center h5">
+				  </br><img src="gtiprin.png" class="img-fluid img-thumbnail w-75">
+		</div>
+	</main>
+	</br><div class="lead text-center h5">
 			Nous allons voir par la suite les commandes basique à Git et son utilisation lors de projet divers, la présentation de Github
 			Nous allons faire de vous des expert en commandes Git!
 	</div>
