--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta property="og:image" content="">
 
   <link rel="manifest" href="site.webmanifest">
-  <link rel="icon" href="lili.png" type="image/png" />
+  <link rel="icon" href="lili.png" type="image/png"/>
   <link rel="shortcut icon" href="lili.png" />
 
   <link rel="stylesheet" href="css/normalize.css">
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 	  <div class="container-fluid">
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
 		  <span class="navbar-toggler-icon"></span>
@@ -40,33 +40,19 @@
 				GIT
 			  </a>
 			  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-			  <li><a class="dropdown-item" href="CommandeGit.html">Documentation</a></li>
-			  <li><hr class="dropdown-divider"></li>
-			  <li><a class="dropdown-item" href="https://github.com/qpeachy">GitHub</a></li>
+          <li><a class="dropdown-item" href="CommandeGit.html">Documentation</a></li>
+          <li><hr class="dropdown-divider"></li>
+          <li><a class="dropdown-item" href="https://github.com/qpeachy" target="_blank">GitHub</a></li>
+          <li><a class="dropdown-item" href="https://about.gitlab.com/" target="_blank">GitLab</a></li>
 			  </ul>
 			</li>
-					
-			<li class="nav-item dropdown">
-			  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-				GitLab
-			  </a>
-			  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-			  <li><a class="dropdown-item" href="GitLab.html">Documentation</a></li>
-			  <li><hr class="dropdown-divider"></li>
-			  <li><a class="dropdown-item" href="https://about.gitlab.com/">GitLab</a></li>
-			  </ul>
-			</li>
-			
+
 		  </ul>
-		  <form class="d-flex">
-			<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-			<button class="btn btn-outline-success" type="submit">Search</button>
-		  </form>
 		</div>
 	  </div>
 	</nav>
-	
-	
+
+
 	<main role="main" class="container">
 		<div class="text-center title" id='p1'>
                 <h1></br>Qu'est ce que GIT ?</br></h1>
