--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <meta property="og:image" content="">
 
   <link rel="manifest" href="site.webmanifest">
-  <link rel="icon" href="lili.png" type="image/png"/>
-  <link rel="shortcut icon" href="lili.png" />
+  <link rel="icon" href="img/lili.png" type="image/png"/>
+  <link rel="shortcut icon" href="img/lili.png" />
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
@@ -33,18 +33,18 @@
 		  <span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-		  <a class="navbar-brand" href="index.htlm">Home</a>
+		  <a class="navbar-brand" href="index.html">Home</a>
 		  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 			 <li class="nav-item dropdown">
 			  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
 				GIT
 			  </a>
-			  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="CommandeGit.html">Documentation</a></li>
-          <li><hr class="dropdown-divider"></li>
-          <li><a class="dropdown-item" href="https://github.com/qpeachy" target="_blank">GitHub</a></li>
-          <li><a class="dropdown-item" href="https://about.gitlab.com/" target="_blank">GitLab</a></li>
-			  </ul>
+         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+           <li><a class="dropdown-item" href="CommandeGit.html">Documentation</a></li>
+           <li><hr class="dropdown-divider"></li>
+           <li><a class="dropdown-item" href="indexhub.html">GitHub Menu</a></li>
+           <li><a class="dropdown-item" href="https://github.com/qpeachy" target="_blank">GitHub</a></li>
+         </ul>
 			</li>
 
 		  </ul>
@@ -58,7 +58,7 @@
                 <h1></br>Qu'est ce que GIT ?</br></h1>
                 <p class="lead h5"> Git est de loin le système de contrôle de version le plus largement utilisé aujourd'hui.
                   Git est un projet open source avancé, qui est activement maintenu. À l'origine, il a été développé en 2005 par Linus Torvalds, le créateur bien connu du noyau du système d'exploitation Linux</p>
-				  </br><img src="gtiprin.png" class="img-fluid img-thumbnail w-75">
+				  </br><img src="img/gtiprin.png" class="img-fluid img-thumbnail w-75">
 		</div>
 	</main>
 	</br><div class="lead text-center h5">
