--- a/indexhub.html
+++ b/indexhub.html
@@ -81,31 +81,31 @@
   <div>
     <h3>Actions</h3>
     <img src="img/menuactions.PNG" class="img-fluid img-thumbnail w-50">
-    <p> Cette rebrique permet à automatiser, customiseret executer le flux de developpement de son logiciel</p>
+    <p> Cette rebrique permet à automatiser, customiser et executer le flux de developpement de son logiciel</p>
   </div>
 
   <div>
     <h3>Projects</h3>
     <img src="img/menuproject.PNG" class="img-fluid img-thumbnail w-50">
-    <p> La rebrique code sert à </p>
+    <p> Cette rebrique permet la création d'un tableur personnalisé qui contient un suivie de toutes les changements éffectuer au project en accord avec les issues et pull request </p>
   </div>
 
   <div>
     <h3>Security</h3>
     <img src="img/menusecurity.PNG" class="img-fluid img-thumbnail w-50">
-    <p> La rebrique code sert à </p>
+    <p> Cette rebrique permet de voir toutes les politiques de sécurité, autres avertissements et fonctions de sécurité </p>
   </div>
 
   <div>
     <h3>Insights</h3>
     <img src="img/menuinsights.PNG" class="img-fluid img-thumbnail w-50">
-    <p> La rebrique code sert à </p>
+    <p> Cete rebrique apporte des données sur l'activité, les contributions et dependances du projet </p>
   </div>
 
   <div>
     <h3>Settings</h3>
     <img src="img/menusett.PNG" class="img-fluid img-thumbnail w-50">
-    <p> La rebrique code sert à </p>
+    <p> Cette rebrique donne accès au paramètres généraux du dossier </p>
   </div>
 
 </div>
